# back-to-basics

./: .gitignore  README.md
00_math/00_thinking/: 00_how-to-solve-it.md
01_algorithms/: README.md
01_algorithms/00_preliminaries/: 00_analysis.md  01_recursion.md  99_universal-tips.md
01_algorithms/01_exercises/: template-notes.md
01_algorithms/01_exercises/array/: summary.md
01_algorithms/01_exercises/array/b_nontrivial/3WayArrayDisjointness/: notes.md  solution.py
01_algorithms/01_exercises/dynamic_programming/: summary.md
01_algorithms/01_exercises/dynamic_programming/_dpv/Knapsack0_1/java-archive/: Solution.java  notes.md
01_algorithms/01_exercises/dynamic_programming/_dpv/KnapsackUnbounded/java-archive/: Solution.java  notes.md
01_algorithms/01_exercises/dynamic_programming/_dpv/Q072_EditDistance/java-archive/: Solution.java  notes.md
01_algorithms/01_exercises/dynamic_programming/_dpv/Q300_LongestIncreasingSubsequence/java-archive/: Solution.java  notes.md
01_algorithms/01_exercises/dynamic_programming/_dpv/Q312_BurstBalloons/java-archive/: Solution.java  notes.md
01_algorithms/01_exercises/tree/: summary.md
01_algorithms/01_exercises/tree/_traversals/Q094_BinaryTreeInorderTraversal/: notes.md
01_algorithms/01_exercises/tree/_traversals/Q102_LevelOrderTraversal/java-archive/: Solution.java
01_algorithms/01_exercises/tree/a_basic/Q100_SameTree/java-archive/: Solution.java
01_algorithms/01_exercises/tree/a_basic/Q104_MaxDepthBinaryTree/java-archive/: notes.md
01_algorithms/01_exercises/tree/a_basic/Q112_PathSum/java-archive/: Solution.java
01_algorithms/01_exercises/tree/a_basic/Q226_InvertBinaryTree/java-archive/: Solution.java
01_algorithms/01_exercises/tree/a_basic/Q572_SubtreeOfAnotherTree/java-archive/: Solution.java
01_algorithms/01_exercises/tree/b_nontrivial/Q250_CountUnivalueSubtrees/java-archive/: notes.md
02_pl-usage/cpp/00_primer/: README.md  ch-03.md  ch-06.md  ch-09.md  ch-11.md  ch-13.md  ch-16.md
02_pl-usage/cpp/graphlib/: README.md
02_pl-usage/cpp/graphlib/examples/: CMakeLists.txt  core_test.cpp
02_pl-usage/cpp/graphlib/src/graphlib/: graph.cpp  graph.hpp
02_pl-usage/cpp/graphlib/src/graphlib/algo/: dfs.cpp  mst.cpp  weighted_paths.cpp  weighted_paths.hpp
02_pl-usage/cpp/graphlib/src/graphlib/geometry/: graph_2d.hpp
02_pl-usage/java/00_conceptual/: 00_quick-reboot.md  02_utils-library.md
02_pl-usage/java/00_notes/: 01_code-structure.md  02_utils-library.md
02_pl-usage/java/dslib/: pom.xml
02_pl-usage/java/exercises/: template-notes.md
02_pl-usage/java/exercises/src/array/: Q001_TwoSum.java  Q053_MaximumSubarray.java  Q121_BuyAndSellStock.java  Q152_MaximumProductSubarray.java  notes.md  summary.md
02_pl-usage/java/exercises/src/array/Q001_TwoSum/: Solution.java  notes.md
02_pl-usage/java/exercises/src/array/Q053_MaximumSubarray/: Solution.java  notes.md
02_pl-usage/java/exercises/src/array/Q121_BestTimeToBuyAndSellStock/: Solution.java  notes.md
02_pl-usage/java/exercises/src/basics/a1_tree/: Q094_BinaryTreeInorderTraversal.java  Q101_SymmetricTree.java  Q102_LevelOrderTraversal.java  Q104_MaxDepthBinaryTree.java  Q112_PathSum.java  Q144_BinaryTreePreorderTraversal.java  Q250_CountUnivalueSubtrees.java  TreeNode.java  notes.md
02_pl-usage/java/exercises/src/basics/a2_queue_and_stack/: Q622_DesignCircularQueue.java  notes.md
02_pl-usage/java/exercises/src/bits/: summary.md
02_pl-usage/java/exercises/src/blind75/misc/: Q001_TwoSum.java  Q053_MaximumSubarray.java  Q121_BuyAndSellStock.java  (+2 more)
02_pl-usage/java/exercises/src/design/: Q622_DesignCircularQueue.java  summary.md
02_pl-usage/java/exercises/src/dynamic_programming/: summary.md
02_pl-usage/java/exercises/src/graph/: summary.md
02_pl-usage/java/exercises/src/heap/: summary.md
02_pl-usage/java/exercises/src/interval/: summary.md
02_pl-usage/java/exercises/src/linked_list/: summary.md
02_pl-usage/java/exercises/src/string/: summary.md
02_pl-usage/java/exercises/src/tree/: TreeNode.java  summary.md
02_pl-usage/python/00_notes/: 00_quick-reboot.md  01_data-structures.md
algorithms/: README.md
algorithms/basics/: reverse_list.cpp  stl_sort.cpp
algorithms/graphlib/: CMakeLists.txt  README.md
algorithms/graphlib/examples/: CMakeLists.txt  bfs_test.cpp  core_test.cpp  dfs_test.cpp  init_test.cpp  mst_test.cpp  weighted_paths_test.cpp
algorithms/graphlib/examples/algo/: bfs_test.cpp  dfs_test.cpp  mst_test.cpp  weighted_paths_test.cpp
algorithms/graphlib/examples/geometry/: graph_2d_test.cpp
algorithms/graphlib/src/: CMakeLists.txt  bfs.cpp  bfs.hpp  dfs.cpp  dfs.hpp  graph.cpp  graph.hpp  mst.cpp  mst.hpp  weighted_paths.cpp  weighted_paths.hpp
algorithms/graphlib/src/graphlib/: CMakeLists.txt  graph.cpp  graph.hpp
algorithms/graphlib/src/graphlib/algo/: bfs.cpp  bfs.hpp  dfs.cpp  dfs.hpp  mst.cpp  mst.hpp  weighted_paths.cpp  weighted_paths.hpp
algorithms/graphlib/src/graphlib/geometry/: graph_2d.cpp  graph_2d.hpp
algorithms/graphs/: CMakeLists.txt  graph.hpp  test.cpp
algorithms/graphs/examples/: CMakeLists.txt  bfs_test.cpp  init_test.cpp  test.cpp
algorithms/graphs/src/: CMakeLists.txt  bfs.cpp  bfs.hpp  graph.cpp  graph.hpp
algorithms/notes/: 01_analysis.md
algorithms/skiena/ch-03/: 01-parentheses.cpp  02-reverse_list.cpp
c/king/ch2/: ex3.c  ex4.c  p4.c  p7.c  p8.c
c/king/ch3/: p1.c  p3.c  p4.c  p5.c
c/king/ch4/: p3.c  p4.c  p5.c
c/king/ch5/: p2.c  p4.c  p7.c  p9.c
c/king/ch6/: p1.c  p11.c  p2.c  p5.c  p6.c  p8.c
cpp/: .clang-format
cpp/graphlib/: README.md
cpp/graphlib/examples/algo/: dfs_test.cpp  weighted_paths_test.cpp
cpp/graphlib/src/graphlib/algo/: bfs.cpp  bfs.hpp  dfs.hpp  mst.hpp
cpp/primer/: README.md  ch-02.md  ch-03.md  ch-04.md  ch-06.md  ch-07.md  ch-09.md  ch-11.md  ch-12.md  ch-13.md  ch-15.md  ch-16.md
cpp_notebook/: 00_day1.md  ch-00.md
cpp_notebook/primer/: _nav.md  ch-01.md  ch-02.md  ch-03.md  ch-04.md  ch-05.md  ch-06.md  ch-07.md  ch-09.md  ch-11.md  ch-12.md  ch-13.md  ch-15.md  ch-16.md
linux_notebook/: 00_helloworld.txt  01_remarkable.md
(+44 files in other folders)
